src/index.scss
@import '../node_modules/normalize.css/normalize.css';

* {
  box-sizing: border-box;
}

body {
  color: rgb(250, 250, 250);
  background: rgb(33, 33, 33);
  font-family: 'Share Tech Mono', sans-serif;
  font-size: 12px;


  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;  
}

header {
  padding: 1rem;
}

a, a:visited {
  color: rgb(250, 250, 250);
}


main {
  padding: 0 0;

  ul#pieces {
    list-style-type: none;
    list-style-position: inside;
  }
}

h1 {
  font-size: 1.2em;
  font-weight: normal;
}

